--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+#streamlit
 openvino
 numpy==1.26.4
 moviepy==1.0.3
@@ -7,4 +7,3 @@ opencv-python-headless==4.10.0.84
 streamlit-camera-input-live==0.2.0
 tensorflow==2.16.1
 roboflow
-libGL.so.1
